--- a/EXAM2.ipynb
+++ b/EXAM2.ipynb
@@ -50,7 +50,7 @@
       "metadata": {
         "id": "jimIfffjowKe"
       },
-      "execution_count": 274,
+      "execution_count": 327,
       "outputs": []
     },
     {
@@ -83,14 +83,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 275,
+      "execution_count": 328,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 491
         },
         "id": "jr-xLmw7nmYz",
-        "outputId": "f4a05408-db1e-423c-a050-afb2af081647"
+        "outputId": "c8fccf7c-c19d-4b5a-da6e-9b96e1cd2b9a"
       },
       "outputs": [
         {
@@ -149,7 +149,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-a4bf0166-5397-4136-931c-3eee884961a2\">\n",
+              "  <div id=\"df-0fc51c31-2649-41cc-b393-26e5ba6512e0\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -437,7 +437,7 @@
               "</table>\n",
               "<p>10 rows × 21 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a4bf0166-5397-4136-931c-3eee884961a2')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0fc51c31-2649-41cc-b393-26e5ba6512e0')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -488,12 +488,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-a4bf0166-5397-4136-931c-3eee884961a2 button.colab-df-convert');\n",
+              "          document.querySelector('#df-0fc51c31-2649-41cc-b393-26e5ba6512e0 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-a4bf0166-5397-4136-931c-3eee884961a2');\n",
+              "          const element = document.querySelector('#df-0fc51c31-2649-41cc-b393-26e5ba6512e0');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -516,7 +516,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 275
+          "execution_count": 328
         }
       ],
       "source": [
@@ -543,9 +543,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Cbik0x-ypSEY",
-        "outputId": "71937c45-52ab-4551-e61d-198c43fd32c7"
+        "outputId": "f30039f2-b222-428c-b938-4a90e3c757b5"
       },
-      "execution_count": 276,
+      "execution_count": 329,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -576,7 +576,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 276
+          "execution_count": 329
         }
       ]
     },
@@ -610,7 +610,7 @@
       "metadata": {
         "id": "T9hwV1b6w0VO"
       },
-      "execution_count": 277,
+      "execution_count": 330,
       "outputs": []
     },
     {
@@ -624,9 +624,9 @@
           "height": 270
         },
         "id": "3dD24p-NB56I",
-        "outputId": "53bec1f3-08b4-4cc2-a90d-2e038b798335"
+        "outputId": "a64498eb-90ce-45e0-ce97-9a9c2283289f"
       },
-      "execution_count": 278,
+      "execution_count": 331,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -662,7 +662,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-92dc6a82-acc8-4efa-9619-9f171d732227\">\n",
+              "  <div id=\"df-76474f02-9fd8-4a33-8f5f-20b37de39de2\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -823,7 +823,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-92dc6a82-acc8-4efa-9619-9f171d732227')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-76474f02-9fd8-4a33-8f5f-20b37de39de2')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -874,12 +874,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-92dc6a82-acc8-4efa-9619-9f171d732227 button.colab-df-convert');\n",
+              "          document.querySelector('#df-76474f02-9fd8-4a33-8f5f-20b37de39de2 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-92dc6a82-acc8-4efa-9619-9f171d732227');\n",
+              "          const element = document.querySelector('#df-76474f02-9fd8-4a33-8f5f-20b37de39de2');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -902,7 +902,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 278
+          "execution_count": 331
         }
       ]
     },
@@ -935,9 +935,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rG7pXUurB638",
-        "outputId": "ba7538c8-e64b-41da-bce4-88e4e45196d7"
+        "outputId": "8d587659-25b6-4a06-8843-a2ee40bdeef5"
       },
-      "execution_count": 279,
+      "execution_count": 332,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -952,7 +952,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 279
+          "execution_count": 332
         }
       ]
     },
@@ -984,9 +984,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ML1U74LjGeK4",
-        "outputId": "c405319e-a264-461b-d540-721daa19860e"
+        "outputId": "08ac98bf-2336-43a0-ec25-ca90e04d907f"
       },
-      "execution_count": 280,
+      "execution_count": 333,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -996,7 +996,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 280
+          "execution_count": 333
         }
       ]
     },
@@ -1020,9 +1020,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ncgtah8AMqGj",
-        "outputId": "78fc0f41-eb75-455e-db24-4e18ec34b138"
+        "outputId": "af2e4a4f-a9e5-44a4-bc3a-c8b7b42c6a25"
       },
-      "execution_count": 321,
+      "execution_count": 334,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1032,7 +1032,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 321
+          "execution_count": 334
         }
       ]
     },
@@ -1057,9 +1057,9 @@
           "height": 444
         },
         "id": "trnoTeElg761",
-        "outputId": "f5bc4c23-ab67-4a15-be28-a484d6e59891"
+        "outputId": "e8ed9647-10bd-4b52-d87a-fd03a43b34a8"
       },
-      "execution_count": 282,
+      "execution_count": 335,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1115,7 +1115,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-ca87fce2-92f2-4dd0-b259-a81f40bcc4d4\">\n",
+              "  <div id=\"df-23ef5f71-6692-4d0e-881b-87c0a5de2676\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1391,7 +1391,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ca87fce2-92f2-4dd0-b259-a81f40bcc4d4')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-23ef5f71-6692-4d0e-881b-87c0a5de2676')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1442,12 +1442,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-ca87fce2-92f2-4dd0-b259-a81f40bcc4d4 button.colab-df-convert');\n",
+              "          document.querySelector('#df-23ef5f71-6692-4d0e-881b-87c0a5de2676 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-ca87fce2-92f2-4dd0-b259-a81f40bcc4d4');\n",
+              "          const element = document.querySelector('#df-23ef5f71-6692-4d0e-881b-87c0a5de2676');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1470,7 +1470,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 282
+          "execution_count": 335
         }
       ]
     },
@@ -1495,9 +1495,9 @@
           "height": 270
         },
         "id": "opReQoJMjFyI",
-        "outputId": "b0e04ebd-5518-4ce3-9464-40523aeaf9f2"
+        "outputId": "bd8cf3df-6ee0-40aa-890e-0c4d536b735a"
       },
-      "execution_count": 283,
+      "execution_count": 336,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1533,7 +1533,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-a6dbd7b9-a778-4b00-ab13-87e72ea50e5d\">\n",
+              "  <div id=\"df-a7f0f06a-7411-4225-b8ad-ce5c967bacdb\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1694,7 +1694,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a6dbd7b9-a778-4b00-ab13-87e72ea50e5d')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a7f0f06a-7411-4225-b8ad-ce5c967bacdb')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1745,12 +1745,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-a6dbd7b9-a778-4b00-ab13-87e72ea50e5d button.colab-df-convert');\n",
+              "          document.querySelector('#df-a7f0f06a-7411-4225-b8ad-ce5c967bacdb button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-a6dbd7b9-a778-4b00-ab13-87e72ea50e5d');\n",
+              "          const element = document.querySelector('#df-a7f0f06a-7411-4225-b8ad-ce5c967bacdb');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1773,7 +1773,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 283
+          "execution_count": 336
         }
       ]
     },
@@ -1799,9 +1799,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b81f4307-608d-40d4-9dad-3831d6081842"
+        "outputId": "58749071-e856-45c7-d1d4-c6d310db61bc"
       },
-      "execution_count": 284,
+      "execution_count": 337,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1811,7 +1811,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 284
+          "execution_count": 337
         }
       ]
     },
@@ -1823,7 +1823,7 @@
       "metadata": {
         "id": "iL5fE5RQiUhl"
       },
-      "execution_count": 285,
+      "execution_count": 338,
       "outputs": []
     },
     {
@@ -1836,9 +1836,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-J-S62e6i0wS",
-        "outputId": "acf1816c-6cfd-487e-d8e9-0ac6b2bd21e5"
+        "outputId": "17d42ed3-97d0-43bf-89f5-9105220e5330"
       },
-      "execution_count": 286,
+      "execution_count": 339,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1853,7 +1853,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 286
+          "execution_count": 339
         }
       ]
     },
@@ -1878,19 +1878,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pNjuQF0BlgH-",
-        "outputId": "9fe84980-5292-4ed0-c1aa-e7569371322d"
+        "outputId": "64fa930a-52fd-49b3-bae3-c7e609213e10"
       },
-      "execution_count": 287,
+      "execution_count": 340,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x7f9e662edcd0>"
+              "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x7f9e661ae890>"
             ]
           },
           "metadata": {},
-          "execution_count": 287
+          "execution_count": 340
         }
       ]
     },
@@ -1905,9 +1905,9 @@
           "height": 426
         },
         "id": "oispW8cMmZjR",
-        "outputId": "1a27b97b-b185-4091-a169-a440377b8a78"
+        "outputId": "957842a1-96e0-4b86-ebf5-0f7e93a34c66"
       },
-      "execution_count": 288,
+      "execution_count": 341,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1929,7 +1929,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-9ae29f80-8a60-4e79-8cc5-13883ae70f1d\">\n",
+              "  <div id=\"df-8c233da0-6d3b-4de1-bda4-c1d72481ac5c\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -2043,7 +2043,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9ae29f80-8a60-4e79-8cc5-13883ae70f1d')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8c233da0-6d3b-4de1-bda4-c1d72481ac5c')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -2094,12 +2094,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-9ae29f80-8a60-4e79-8cc5-13883ae70f1d button.colab-df-convert');\n",
+              "          document.querySelector('#df-8c233da0-6d3b-4de1-bda4-c1d72481ac5c button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-9ae29f80-8a60-4e79-8cc5-13883ae70f1d');\n",
+              "          const element = document.querySelector('#df-8c233da0-6d3b-4de1-bda4-c1d72481ac5c');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -2122,7 +2122,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 288
+          "execution_count": 341
         }
       ]
     },
@@ -2147,9 +2147,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8v6_5x4Rm_Zs",
-        "outputId": "4b324a69-a545-4bd5-edab-55aed72d0e40"
+        "outputId": "3232e26d-d7e7-445e-8e0f-f427739a3472"
       },
-      "execution_count": 289,
+      "execution_count": 342,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2169,7 +2169,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 289
+          "execution_count": 342
         }
       ]
     },
@@ -2188,9 +2188,9 @@
         ""
       ],
       "metadata": {
-        "id": "el7rYxK89rmH"
+        "id": "z1g7SyqlSta_"
       },
-      "execution_count": 315,
+      "execution_count": 342,
       "outputs": []
     },
     {
