--- a/Quiz22.ipynb
+++ b/Quiz22.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz22.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMdOHsv85VqMa9kcVe3WZM0",
+      "authorship_tag": "ABX9TyNBo9QumgDwS0PbnFMGYukA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,6 +37,28 @@
       ],
       "metadata": {
         "id": "fWHOIIgyJ_Oa"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Today's Assignment: \n",
+        "\n",
+        "Head over to [Oklahaoma Research Day](https://symposium.foragerone.com/okrd22). Spend some time looking at three posters that include statistical charts or graphs.  Include links to each.  Discuss the strengths and weaknesses of each.  Do they display excellence or do they lie?"
+      ],
+      "metadata": {
+        "id": "-DJUjcKDfKIF"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "[Agricultural Technology Adoption Among Smallholder Farmers in Kenya: A Case Study of Kakamega County](https://symposium.foragerone.com/okrd22/presentations/37657)\n",
+        "\n",
+        "In this study, the southeastern sub-countries of Malava, Ikolomani, Lurambi and Shinyalu were picked to conduct the study of smallholder farms and comprehend farmer's struggle and explanation why modern agricultural technologeies are required to overcome the impediments. The reduction in the production of agricultural goods had directly affected the economic prosperity of these countries. For years, the smallholder farmers have been using tradition equiptments for farming that is why the main objective of this research is to find out why are the farmers still using the same tools instead of replacing it with more effective modern tools. Some of the outcomes were, a combination of reluctance, mistrust resulting from negative past experiences, lack of efficient communication channels, and sociocultural practices were found to be contributing factors on the absence of agricultural technology adoption."
+      ],
+      "metadata": {
+        "id": "cjyVckfTgFC8"
       }
     },
     {
