--- a/Quiz22.ipynb
+++ b/Quiz22.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz22.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNBo9QumgDwS0PbnFMGYukA",
+      "authorship_tag": "ABX9TyNDn9t2Yn2NYU6P8IM3bJz3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,6 +59,18 @@
       ],
       "metadata": {
         "id": "cjyVckfTgFC8"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "[EFFECTS OF ORGANIC AND INORGANIC AMENDMENT ON THE HEIGHT AND BIOMASS OF TWO WINTER WHEAT VARIETIES IN SOUTHWEST OKLAHOMA](https://symposium.foragerone.com/okrd22/presentations/37701)\n",
+        "\n",
+        "\n",
+        "Wheat (Triticum aestivum) is considered as one of the most important staple crops for both developed and developing countries. One interesting fact abput wheat is it contributes about 41% of the calories and 50% of the proteins total world consumption. However, there are new varieties of winter wheat which respond differently based on geographical location. Therefore, the objective is to determine the best winter wheat variety for Southwest Oklahoma using both organic and inorganic amendments."
+      ],
+      "metadata": {
+        "id": "8GrPGWvv20KN"
       }
     },
     {
