--- a/Quiz22.ipynb
+++ b/Quiz22.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz22.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNDn9t2Yn2NYU6P8IM3bJz3",
+      "authorship_tag": "ABX9TyOvzN4dyAtfaREIN6orKepY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -71,6 +71,18 @@
       ],
       "metadata": {
         "id": "8GrPGWvv20KN"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "[Visualizing Oklahoma: Digital Photo Archives and Maps in Oklahoma](https://symposium.foragerone.com/okrd22/presentations/37209)\n",
+        "\n",
+        "\n",
+        "This research was done by Dr. Sarah Janda at Cameron University and Dr. Patricia Loughlin at OCU for their Oklahoma history textbook under the contract with the University of Oklahoma Press for state adoption 2025. The main goal of this project was to represent the whole history of Oklahoma state with the help of photos, maps and timelines."
+      ],
+      "metadata": {
+        "id": "FJxoSOzjhzjR"
       }
     },
     {
