--- a/Exam3.ipynb
+++ b/Exam3.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Exam3.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM926LvKOqKNZR4hAGEGLkk",
+      "authorship_tag": "ABX9TyPiGElUaAVhChZIoFBC5nFk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,7 +48,7 @@
       "metadata": {
         "id": "tTV6jVQnvLXy"
       },
-      "execution_count": 18,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -79,14 +79,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 23,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 424
         },
         "id": "IovR5g6zupDf",
-        "outputId": "470da31a-7e67-4c9b-bf8a-6ac201d36756"
+        "outputId": "ebd4fb1a-038b-4be2-ac80-e97e2f3b4e65"
       },
       "outputs": [
         {
@@ -123,7 +123,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-81a93b23-7b9a-45ea-a5fc-8096f2ae547b\">\n",
+              "  <div id=\"df-7302027e-f35b-43af-91eb-ba479929447c\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -387,7 +387,7 @@
               "</table>\n",
               "<p>200 rows × 17 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-81a93b23-7b9a-45ea-a5fc-8096f2ae547b')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7302027e-f35b-43af-91eb-ba479929447c')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -438,12 +438,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-81a93b23-7b9a-45ea-a5fc-8096f2ae547b button.colab-df-convert');\n",
+              "          document.querySelector('#df-7302027e-f35b-43af-91eb-ba479929447c button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-81a93b23-7b9a-45ea-a5fc-8096f2ae547b');\n",
+              "          const element = document.querySelector('#df-7302027e-f35b-43af-91eb-ba479929447c');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -466,7 +466,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 23
         }
       ],
       "source": [
@@ -501,14 +501,36 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "(c) (10 points) Create a histogram of the ‘Goals’.  \n",
+        "(d) (10 points) Create a histogram of the ‘Goals’ and ‘Assists’ on the same axis.   \n",
+        "(e) (10 points) Create a barchart for most goals scored by nationality.  \n",
+        "(f) (10 points) Create a boxplot of ‘Yel’ (yellow cards) by nationality.  \n",
+        "(g) (10 points) Create ‘Goals’ and ‘Assists’ as scatter. Signify your favorite club or nationality in some way on the\n",
+        "scatterplot. You may need to add a new column to the dataset to do so.  \n",
+        "(h) (10 points) Create stacked barplot of goals and assists of French National Team. (they won this tourney!) Be sure\n",
+        "to comment on why it is appropriate to stack goals and assists.  \n",
+        "(i) (10 points) Create a correlation heatmap of the entire dataset.  \n",
+        "\n",
+        "2. (10 points) Questions about the exam  \n",
+        "(a) Approximately how long did you work on this exam?  \n",
+        "(b) Which was the hardest and easiest topic from this section?  \n",
+        "(c) Which method of visualization are you still unclear what it might show?"
+      ],
+      "metadata": {
+        "id": "uY_AGrl_71fX"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         ""
       ],
       "metadata": {
-        "id": "8d_kV783300W"
+        "id": "7r27WEfA8gSE"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     }
   ]
