--- a/Exam3.ipynb
+++ b/Exam3.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Exam3.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOkXGf01BD/F3b7SqtSj6OA",
+      "authorship_tag": "ABX9TyNLBgAoBu8TUYA4HR8YEm5a",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -500,28 +500,6 @@
       ],
       "metadata": {
         "id": "iN8OW3dB29PX"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "  \n",
-        "(d) (10 points) Create a histogram of the ‘Goals’ and ‘Assists’ on the same axis.   \n",
-        "(e) (10 points) Create a barchart for most goals scored by nationality.  \n",
-        "(f) (10 points) Create a boxplot of ‘Yel’ (yellow cards) by nationality.  \n",
-        "(g) (10 points) Create ‘Goals’ and ‘Assists’ as scatter. Signify your favorite club or nationality in some way on the\n",
-        "scatterplot. You may need to add a new column to the dataset to do so.  \n",
-        "(h) (10 points) Create stacked barplot of goals and assists of French National Team. (they won this tourney!) Be sure\n",
-        "to comment on why it is appropriate to stack goals and assists.  \n",
-        "(i) (10 points) Create a correlation heatmap of the entire dataset.  \n",
-        "\n",
-        "2. (10 points) Questions about the exam  \n",
-        "(a) Approximately how long did you work on this exam?  \n",
-        "(b) Which was the hardest and easiest topic from this section?  \n",
-        "(c) Which method of visualization are you still unclear what it might show?"
-      ],
-      "metadata": {
-        "id": "uY_AGrl_71fX"
       }
     },
     {
@@ -2564,10 +2542,15 @@
     {
       "cell_type": "markdown",
       "source": [
-        "2. (10 points) Questions about the exam  \n",
+        "(10 points) Questions about the exam  \n",
         "(a) Approximately how long did you work on this exam?  \n",
+        "=I was able to finish this exam in multiple sittings and took be about 4 to 5 hours to complete it.\n",
+        "\n",
         "(b) Which was the hardest and easiest topic from this section?  \n",
-        "(c) Which method of visualization are you still unclear what it might show?"
+        "= The hardest question for me was question no. (g) and the easiest was question (a)\n",
+        "\n",
+        "(c) Which method of visualization are you still unclear what it might show?  \n",
+        "=I don't know if I did question (g) in the right way. "
       ],
       "metadata": {
         "id": "Q3-tarlgXgzw"
