--- a/ProposalRecreating.ipynb
+++ b/ProposalRecreating.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ProposalRecreating.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN3MQuD8ZWtgqxRy/tDNcZQ",
+      "authorship_tag": "ABX9TyMEfS7wm7DpBCcrbBptbU5h",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,7 +42,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The topic that I have selected for Recreating the Masters is the chart(bar/barh) on the top 10 fastest land animals. "
+        "The topic that I have selected for Recreating the Masters is the chart(bar/barh) on the top 10 fastest land animals. \n",
+        "\n",
+        "The visualization link is https://www.grandviewoutdoors.com/gear/hunting/worlds-top-10-fastest-land-mammals\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "QcHBf-d6KWE9"
@@ -58,6 +62,31 @@
       "metadata": {
         "id": "wZoVsUu4HoLZ"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The visualization I chose represents the top 10 fastest land mammals and it displays the name of the animal and their top speed in a barh diagram. It is easily understandable by any viewers to find out what animal runs at what speed. I am still looking for a reliable data set to work with so I have not disclosed the dataset link here.\n",
+        "\n",
+        "The only down side is not disclosing the name of the second last one. I will disclose the name of that animal while recreating the visual.\n",
+        "\n",
+        "The most hard part for me while recreating the above visualization will be putting the image of the corresponding animals right next to the barh.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "m0XtTzaK1tgZ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "QwEsA2Sk3LMv"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
