--- a/ProposalRecreating.ipynb
+++ b/ProposalRecreating.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ProposalRecreating.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMEfS7wm7DpBCcrbBptbU5h",
+      "authorship_tag": "ABX9TyPFiFGQ1sKVe4TKsCpECDIM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -80,10 +80,217 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "import requests\n",
+        "import pandas as pd\n",
+        "from bs4 import BeautifulSoup\n",
+        "import matplotlib.pyplot as plt"
       ],
       "metadata": {
         "id": "QwEsA2Sk3LMv"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "URL = \"https://en.wikipedia.org/wiki/Fastest_animals#Mammals\"\n",
+        "res = requests.get(URL)\n",
+        "soup = BeautifulSoup(res.content, 'html.parser')\n",
+        "tables = soup.find_all('table')\n",
+        "table = tables[1] # note that the first table (at index 0) is not relevant\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "JEywaoQ9Xwng"
+      },
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df = pd.read_html(str(table), header=0, flavor='html5lib')[0]\n",
+        "#print(df.head(10).to_string())\n",
+        "df.head(20)"
+      ],
+      "metadata": {
+        "id": "tmDwEPeBkMJx",
+        "outputId": "2261cebc-9a8d-470f-ed6a-b6422a2ec5d4",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 175
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "                                      Animal  \\\n",
+              "0                                   Horsefly   \n",
+              "1  Members of Loliginidae and Ommastrephidae   \n",
+              "2                 Paratarsotomus macropalpis   \n",
+              "3                               Tiger beetle   \n",
+              "\n",
+              "                      Maximum recorded speed  \\\n",
+              "0  145 km/h (90 mph)[36][unreliable source?]   \n",
+              "1                           36 km/h (22 mph)   \n",
+              "2      22 cm/s (8.7 in/s)800 m/h (730 ft/ks)   \n",
+              "3                      6.8 km/h (4.2 mph)[7]   \n",
+              "\n",
+              "                                               Notes  \n",
+              "0  The pursuit maneuver used by male Hybomitra hi...  \n",
+              "1  Many of these species \"fly\" out of the water t...  \n",
+              "2  0.7 mm long mite endemic to Southern Californi...  \n",
+              "3  The Australian tiger beetle, Cicindela eburneo...  "
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-d0fb4baf-2dcd-4429-88d7-0a050fa90e18\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Animal</th>\n",
+              "      <th>Maximum recorded speed</th>\n",
+              "      <th>Notes</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Horsefly</td>\n",
+              "      <td>145 km/h (90 mph)[36][unreliable source?]</td>\n",
+              "      <td>The pursuit maneuver used by male Hybomitra hi...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Members of Loliginidae and Ommastrephidae</td>\n",
+              "      <td>36 km/h (22 mph)</td>\n",
+              "      <td>Many of these species \"fly\" out of the water t...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Paratarsotomus macropalpis</td>\n",
+              "      <td>22 cm/s (8.7 in/s)800 m/h (730 ft/ks)</td>\n",
+              "      <td>0.7 mm long mite endemic to Southern Californi...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>Tiger beetle</td>\n",
+              "      <td>6.8 km/h (4.2 mph)[7]</td>\n",
+              "      <td>The Australian tiger beetle, Cicindela eburneo...</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d0fb4baf-2dcd-4429-88d7-0a050fa90e18')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-d0fb4baf-2dcd-4429-88d7-0a050fa90e18 button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-d0fb4baf-2dcd-4429-88d7-0a050fa90e18');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "H7FgHqROuc-N"
       },
       "execution_count": null,
       "outputs": []
