--- a/Recreating_Initialization.ipynb
+++ b/Recreating_Initialization.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ProposalRecreating.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM6MNv8dLvGWnKV5Vhw9nJf",
+      "authorship_tag": "ABX9TyNAnpyvipyFRQgvCQI7W6Uu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,8 @@
       "cell_type": "markdown",
       "source": [
         "#Project Recreating the Master\n",
-        "#Data Processing ad Visualization\n",
+        "#Data Processing ad Visualization CPSMA 4313\n",
+        "#Dr. Nicholas Jacob\n",
         "##Nishan Sunar\n",
         "250662"
       ],
@@ -60,7 +61,7 @@
       "metadata": {
         "id": "jRN54UQHvAoR"
       },
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -105,7 +106,7 @@
           "height": 394
         }
       },
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -316,7 +317,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -347,7 +348,7 @@
           "height": 265
         }
       },
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -401,7 +402,7 @@
           "height": 661
         }
       },
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -433,7 +434,7 @@
       "metadata": {
         "id": "LysaxGlDRpOS"
       },
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": []
     }
   ]
